# UAV_UGV_exploration

./: README.md
src/autonomous_flight/: CMakeLists.txt  package.xml
src/autonomous_flight/cfg/dynamic_exploration/: dynamic_detector_param.yaml  exploration_param.yaml  flight_base.yaml  mapping_param.yaml
src/global_planner/include/global_planner/: dep copy.cpp  dep copy.h  dep.cpp  dep.h  old_dep.cpp
src/map_manager/: CMakeLists.txt
src/map_manager/cfg/: esdf_map_param.yaml
src/map_manager/include/map_manager/: occupancyMap.cpp  occupancyMap.h
src/map_manager/launch/: map_fusion.launch
src/map_manager/src/: map_fusion_node.cpp
src/remote_control/launch/: common_map.launch
src/remote_control/rviz/: dynamic_navigation.rviz  exploration.rviz  merged_exploration_scout.rviz
src/scout_control/params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/scout_description/urdf/: mini.xacro
src/scout_gazebo_sim/launch/: scout_mini_playpen.launch  spawn_scout_mini.launch
src/scout_gazebo_sim/launch/include/: filter_points.launch  gmapping.launch  move_base.launch  pc2l.launch
src/uav_simulator/: CMakeLists.txt
src/uav_simulator/launch/: setupTF.launch  start.launch  try (copy).launch  try.launch  ugv_path_sender.py
src/uav_simulator/src/: pidController.cpp  quadcopterTFBroadcaster.cpp
src/uav_ugv_coordinator/: CMakeLists.txt  package.xml
src/uav_ugv_coordinator/launch/: uav_ugv_coordinator.launch
src/uav_ugv_coordinator/src/: uav_ugv_coordinator copy.cpp  uav_ugv_coordinator.cpp  uav_ugv_coordinator_new.cpp
(+11 files in other folders)
